@@ -27,6 +27,8 @@
 
 #include <vector>
 
+#include "size_mega.hpp" //FIXME: remove (fixing users)
+
 //#define TOKENIZE_KEY_VAL_DEBUG
 
 #ifdef TOKENIZE_KEY_VAL_DEBUG
@@ -799,47 +801,6 @@ void stringtok (Container &container, std::string const &in, const char * const 
             container.push_back (in.substr(i, j-i));
         i = j + 1;
     }
-}
-
-template <class size_type,class inputstream>
-size_type parse_size(inputstream &i) {
-    double number;
-
-    if (!(i >> number))
-        goto fail;
-    char c;
-    if (i.get(c)) {
-        switch(c) {
-        case 't':case 'T':
-            number *= (1024.*1024.*1024.*1024.);
-            break;
-        case 'g':
-            number *= (1000*1000*1000);
-            break;
-        case 'G':
-            number *= (1024*1024*1024);
-            break;
-        case 'm':
-            number *= (1000*1000);
-            break;
-        case 'M':
-            number *= (1024*1024);
-            break;
-        case 'k':
-            number *=1000;
-            break;
-        case 'K':
-            number *= 1024;
-            break;
-
-        default:
-            goto fail;
-        }
-    }
-    if (number - (size_type)number > 1)
-        throw std::runtime_error(std::string("Overflow - size too big to fit: ").append(boost::lexical_cast<std::string>(number)));
-    return (size_type)number;
-fail:    throw std::runtime_error(std::string("Expected nonnegative number followed by optional k,m, or g (2^10,2^20,2^30) suffix."));
 }
 
 // requires Val::operator += as well as copy ctor.  TODO: version that takes InPlaceFold functor.
